tests/paczka1/fuzzy1/15346526.err
Error in line 5: S451 S451 47,5
Error in line 26: T7yzqqlbu S451 1oo,0
Error in line 10: LVUAxYyyl A440 277,0
Error in line 33: UZQxL86 A440 72,5
